# Trajectory-Estimation

./: CMakeLists.txt  GroundTruth.xlsx  README.md  README.md~  attitude_algorithm.m  jiesuan.m  package.xml  posture_fusion.m  sins.m
include/ekf_imu/: ekf_node.h  geometry_math_type.h
include/kalman/: UnscentedKalmanFilter.hpp  UnscentedKalmanFilterBase.hpp
include/ukf_test/: SystemModel.hpp  VioMeasurementModel.hpp  geometry_math_type.h  gps.hpp  predict_part.hpp  update_part.hpp
launch/: ukf_start.launch
src/: csv2bag.cpp  test_main.cpp  ukf_test_node.cpp
